# PlotWithGnu-haskell

./: plot-with-gnu.cabal
src/: Main.hs  Makefile
src/Graphics/: PlotWithGnu.hs
