name: plot-with-gnu
version: 0.0.1
license: GPL-3
license-file: COPYING
copyright: (c) Luchang Jin
author: Luchang Jin 
maintainer: Luchang Jin <waterret@gmail.com>
bug-reports: mailto:waterret@gmail.com
stability: unstable
synopsis: plot with gnuplot
category: Console, Text
cabal-version: >= 1.6
build-type: Simple

flag threaded
  default: False

library
  exposed-modules: Graphics.PlotWithGnu
  hs-source-dirs: src
  build-depends: base >= 4.2
    , directory >= 0.2
    , process >= 1.1
    , unix >= 2.6
    , filepath >= 1.3
    , string-qq >= 0.0.2
    , bytestring >= 0.10
  ghc-options: -Wall -O2
  if flag(threaded)
     ghc-options: -threaded

executable plot-with-gnu
  hs-source-dirs: src
  main-is: Main.hs
  build-depends: base >= 4.2
  ghc-options: -Wall -O2
  if flag(threaded)
     ghc-options: -threaded

